# helloworldopen2014

./: .gitignore  README.md  build  config  default_run  local_boss_run  local_congestion_run  run  safe_ahead_test_run  server_build  server_congestion_run  server_run
c/: .gitignore  Makefile  cbot.c  run
clojure/: README.md  build  clean  project.clj  run
clojure/lib/: README.md
clojure/src/hwo2014bot/: core.clj
coffeescript/: README.md  index.coffee  package.json  run
cpp/: .gitignore  CMakeLists.txt  README.md  TODO  build  clean  common_flags.cpp  connection.cpp  connection.h  game_logic.cpp  game_logic.h  main.cpp  merge.rb  possible.txt  protocol.cpp  protocol.h  run  switch-straight-lengths.csv  throttle_tester  throttle_tester.cpp  turbo.baseline  wojtek_data_log.csv
cpp/bots/: CMakeLists.txt  bot_api.h  bot_interface.h  raw_bot.cpp  raw_bot.h
cpp/bots/basic/: CMakeLists.txt  bot.cpp  bot.h
cpp/bots/constant/: CMakeLists.txt  bot.cpp  bot.h
cpp/bots/default/: CMakeLists.txt  bot.cpp  bot.h
cpp/bots/greedy/: CMakeLists.txt  bot.cpp  bot.h  bot_test.cpp
cpp/bots/kamikaze/: CMakeLists.txt  bot.cpp  bot.h
cpp/bots/kareth/: CMakeLists.txt  bot.cpp  bot.h
cpp/bots/piotr/: CMakeLists.txt  bot.cpp  bot.h
cpp/bots/stepping/: CMakeLists.txt  bot.cpp  bot.h
cpp/bots/switch_optimizer/: CMakeLists.txt  bot.cpp  bot.h
cpp/bots/tomek/: CMakeLists.txt  bot.cpp  bot.h
cpp/bots/wojtek/: CMakeLists.txt  bot.cpp  bot.h
cpp/cmake/: BuildType.cmake  EnableCxx11.cmake  StyleCheck.cmake  StyleConfiguration.cmake  cpplint.py
cpp/data/: switch-radiuses.csv  switch-straight-lengths.csv  switch-turn-lengths.csv
cpp/game/: CMakeLists.txt  approximation.cpp  approximation.h  approximation_test.cpp  bump_detector.cpp  bump_detector.h  bump_tracker.cpp  bump_tracker.h  car.cpp  car.h  car_predictor.h  car_tracker.cpp  car_tracker.h  car_tracker_test.cpp  command.cpp  command.h  crash_model.h  double_path_optimizer.cpp  double_path_optimizer.h  drift_model.cpp  drift_model.h  drift_model_test.cpp  enemy_tracker.cpp  enemy_tracker.h  error_tracker.h  gauss.cpp  gauss.h  gauss_test.cpp  geometry.cpp  geometry.h  greedy_path_optimizer.cpp  greedy_path_optimizer.h  lane.h  lane_length_model.cpp  lane_length_model.h  lane_length_model_test.cpp  lane_scorer.cpp  lane_scorer.h  path_optimizer_interface.h  perfect_path_optimizer.cpp  (+34 more)
cpp/game/data/: CMakeLists.txt  carPositions.json  gameInit.json  gameInitGermany.json  greedyRun.json  switchRun.json  turboRun.json
cpp/game/data/maps/: CMakeLists.txt  elaeintarha.json  england.json  france.json  germany.json  imola.json  keimola.json  pentag.json  random0.json  random1.json  random2.json  random3.json  random4.json  random5.json  random6.json  random7.json  random8.json  random9.json  suzuka.json  usa.json
cpp/gflags/: CMakeLists.txt  cmake_install.cmake  config.h  gflags-export.cmake  gflags_declare.h  util.h
cpp/gtest/include/gtest/internal/: gtest-port.h
cpp/physics/: CMakeLists.txt  speed_tracker.cpp  speed_tracker.h
cpp/schedulers/: CMakeLists.txt  always_switch_scheduler.h  bb.cpp  bb.h  binary_throttle_scheduler.cpp  binary_throttle_scheduler.h  binary_throttle_scheduler_wj.cpp  bulk_scheduler.cpp  bulk_scheduler.h  bump_scheduler.cpp  bump_scheduler.h  greedy_turbo_scheduler.cpp  greedy_turbo_scheduler.h  learning_scheduler.cpp  learning_scheduler.h  local_improver.cpp  local_improver.h  magic_throttle_scheduler.cpp  magic_throttle_scheduler.h  never_switch_scheduler.h  schedule.cpp  schedule.h  scheduler.h  shortest_path_switch_scheduler.cpp  shortest_path_switch_scheduler.h  strategy.h  switch_scheduler.cpp  switch_scheduler.h  throttle_scheduler.h  turbo_scheduler.cpp  turbo_scheduler.h  wojtek_throttle_scheduler.cpp  wojtek_throttle_scheduler.h
cpp/tools/: build  compare_throttle_schedulers.ipy  current_best.txt
cpp/utils/: CMakeLists.txt  connection.cpp  connection.h  deadline.cpp  deadline.h  game_visualizer.cpp  game_visualizer.h  protocol.cpp  protocol.h  stopwatch.h
erlang/: .gitignore  README.md  build  clean  run
erlang/src/: hwo.app.src  hwo_lines.erl  hwo_main.erl
fsharp/: .gitignore  README.md  bot.fs  makefile  run  sample.json
go/: .gitignore  README.md  build  clean  run
go/src/noobbot/: main.go
haskell/: CarPositionsModel.hs  GameInitModel.hs  Main.hs  README.md  SpawnModel.hs  build  clean  hwo2014bot.cabal  run
java/: README.md  build  pom.xml  run
java/src/main/java/noobbot/: Main.java
javascript/: .gitignore  README.md  build  index.js  npm-shrinkwrap.json  package.json  run
lua/: README.md  build  clean  main.lua  run
mono/: README.md  bot.cs  build  clean  makefile
perl/: README.md  build  main.pl  run
php/: BasicBot.class.php  main.php  run
practice/: race14  race17  race2  race3  race7
python/: README.md  build  clean  main.py  run
ruby/: README.md  build  main.rb  run
rust/: README.md  build  clean  main.rs  run
scala/: .gitignore  README.md  build  build.sbt  run
scala/src/main/scala/hwo2014/: NoobBot.scala
scripts/: check_main_args  check_pl_args
